Enable compact headers