@@ -2,4 +2,4 @@ FROM eclipse-temurin:24-jre-noble
 
 COPY ./server/target/universal/stage /opt/bittorrent-server
 
-ENTRYPOINT ["/opt/bittorrent-server/bin/server", "-Dcats.effect.tracing.mode=none"]
+ENTRYPOINT ["/opt/bittorrent-server/bin/server", "-Dcats.effect.tracing.mode=none", "-J-XX:+UnlockExperimentalVMOptions", "-J-XX:+UseCompactObjectHeaders"]
